week3/different_vars_in_blocks.txt

# Rails Environment Configuration.

---
git:
  user.name:  Nicole Lewis
  user.email: lewis.nicole@gmail.com
  version:    git version 1.7.9.msysgit.0

ruby:
  bin:        C:/RailsInstaller/Ruby1.9.2/bin/ruby.exe
  version:    ruby 1.9.3p125 (2012-02-16) [i386-mingw32]

rails:
  bin:        C:/RailsInstaller/Ruby1.9.2/bin/rails.bat
  version:    Rails 3.2.1

ssh:
  public_key_location: C:\Users\Lolo/.ssh/id_rsa.pub
  public_key_contents: ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEAwXtJc0kEJigWsRS+7O55ZopvCvflcNt0DB3hYRWBjikKQz5pLhvw45bDGhe1C
Xk++cISGzQQ93P9uaKxr73EsY4XvmZiM5pxZMqRPtgxmQAlgA51DMguDvRF3l3GLjCkZ+Ca+HtS0ab01mMGMcNbpro3+zpfDZX7WI+bBhtWMeibbbLkxBJVW
F7mhZ62yfCZtuWdTb87vwL5wQrMmQjMj+iAWQhFFVqHF3qgTtzQyPOTf8LxueGGh5PpQQCN+7Qt4x+hrqQFMsiKvGwOJYYWcZOBNIn1Pb21JhU66zXUcJDFB
OTSoMYAGbrJ/aHUgpQk8Nqm2f8vlZmRezaijN4Amw== Nicole Lewis <lewis.nicole@gmail.com>




C:\Sites>cd\

C:\>cd projects

C:\Projects>ls
RubyFall2012  RubyFall2012_Master

C:\Projects>cd RubyFall2012

C:\Projects\RubyFall2012>ls
README.md  TESTING.txt  cmd_logs  week1  week2

C:\Projects\RubyFall2012>cd ..

C:\Projects>cd RubyFall2012_Master

C:\Projects\RubyFall2012_Master>ls
README.md  week1  week2  week3

C:\Projects\RubyFall2012_Master>cd week3

C:\Projects\RubyFall2012_Master\week3>ls
class_materials  exercises  homework

C:\Projects\RubyFall2012_Master\week3>irb
irb(main):001:0> tutcontainers_30.rb
NameError: undefined local variable or method `tutcontainers_30' for main:Object
        from (irb):1
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):002:0> value = "someshape"
=> "someshape"
irb(main):003:0> [1,2].each {|value|puts value} puts value
SyntaxError: (irb):3: syntax error, unexpected tIDENTIFIER, expecting $end
[1,2].each {|value|puts value} puts value
                                   ^
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):004:0> [1,2].each {|value|puts value}
1
2
=> [1, 2]
irb(main):005:0> puts value
someshape
=> nil
irb(main):006:0> [1,2].each {|value| puts value}
1
2
=> [1, 2]
irb(main):007:0> puts value
someshape
=> nil
irb(main):008:0> square
NameError: undefined local variable or method `square' for main:Object
        from (irb):8
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):009:0> square= "some shape"
=> "some shape"
irb(main):010:0> sum=0
=> 0
irb(main):011:0> [1,2,3,4].each do[value; square]
irb(main):012:1> square=value * value #this isa different variable
irb(main):013:1> sum +=square
irb(main):014:1> end
SyntaxError: (irb):11: syntax error, unexpected ';', expecting ']'
[1,2,3,4].each do[value; square]
                        ^
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):015:0> puts sum
0
=> nil
irb(main):016:0> puts square
some shape
=> nil
irb(main):017:0> [1,2,3,4].each do[value; square]
irb(main):018:1> square = value * value #this isa different variable
irb(main):019:1> sum += square
irb(main):020:1> end puts sum puts square
SyntaxError: (irb):17: syntax error, unexpected ';', expecting ']'
[1,2,3,4].each do[value; square]
                        ^
(irb):20: syntax error, unexpected tIDENTIFIER, expecting $end
end puts sum puts square
        ^
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):021:0> end
SyntaxError: (irb):21: syntax error, unexpected keyword_end
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):022:0> puts sum
0
=> nil
irb(main):023:0> puts square
some shape
=> nil
irb(main):024:0> [1,2,3,4].each do |value; square|
irb(main):025:1* square = value * value #this isa different variable
irb(main):026:1> sum += square
irb(main):027:1> end
=> [1, 2, 3, 4]
irb(main):028:0> puts sum
30
=> nil
irb(main):029:0> puts square
some shape
=> nil
irb(main):030:0>
